packages/config/src/__tests__/fixtures/behavior/syntax-error/app.config.js
// This file exists to test that an invalid app.config.ts
// gets used instead of defaulting to a valid app.config.js
export default {};
